2008-03-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Working on matching, auditing code
	

2008-03-04 Jesse Kornblum <md5deep@jessekornblum.com>

	* Added spaces to recorded command line in output files.
	

2008-02-22 Jesse Kornblum <md5deep@jessekornblum.com>

	* Moved source code from CVS to Subversion repository.
	  This shouldn't create any changes in the code, but
	  should be noted.

	* Version change to 2.1. No need for -001 anymore.
	

2007-12-27 Jesse Kornblum <md5deep@jessekornblum.com>

	* Fixed hashdeep current working directory and filesize display
	  when hashing standard input.

2007-12-11 Jesse Kornblum <md5deep@jessekornblum.com>

	* Got multihashing working. It turns out that the SHA-1
	  update code modifies the buffer that its passed.
	

2007-12-08 Jesse Kornblum <md5deep@jessekornblum.com>

	* Moved hash.c into the common code directory, adapting it
	  to work with both md5deep and hashdeep code. Moved display
	  code to a separate file.

	* First working version of hashdeep!
	

2007-12-08 Jesse Kornblum <md5deep@jessekornblum.com>

	* Updated hashing headers to only be included once.
	  Included all hashing headers in common.h

	* Modified hashing code to pass hashing context only into
	  hashing code. This requires void pointers, but avoids
	  the hashing code having to deal with the state at all.

	* Moved md5deep man pages into the md5deep directory
	

2007-12-07 Jesse Kornblum <md5deep@jessekornblum.com>

	* Separated md5deep and hashdeep projects into separate 
	  directories. Moved common code into include and common
	  directories. Man pages moved into man. It doesn't all
	  work just yet, but we're getting close.
	

2007-12-06 Jesse Kornblum <md5deep@jessekornblum.com>

        * Added common.h and ui.h to Makefile.am so that they
	  are included in a distribution.

        * Copied more variables from md5deep source code to hashdeep state.

        * Updated hashdeep usage message

	* Version bump to 2.1-002

	