@@ -38,6 +38,7 @@ status_t file_data_compare(state *s, file_data_t *a, file_data_t *b)
   return status_match;
 }
 
+
 /* These two functions are the "hash" functions for the hash table. 
    Because the original implementation of this code was for storing
    md5 hashes, I used the name "translate" to avoid confusion. */
@@ -45,7 +46,7 @@ status_t file_data_compare(state *s, file_data_t *a, file_data_t *b)
 
 /* Convert a single hexadecimal character to decimal. If c is not a valid
    hex character, returns 0. */
-int translateChar(char c) 
+static int translateChar(char c) 
 {
   // If this is a digit
   if (c > 47 && c < 58) 
@@ -61,7 +62,7 @@ int translateChar(char c)
     
 /* Translates a hex value into it's appropriate index in the array.
    In reality, this just turns the first HASH_SIG_FIGS into decimal */
-uint64_t translate(char *n) 
+static uint64_t translate(char *n) 
 { 
   int count;
   uint64_t total = 0, power = 1;
@@ -83,31 +84,66 @@ void hashtable_init(hashtable_t *t)
 }
 
 
-status_t hashtable_add(state *s, file_data_t *f)
+
+status_t hashtable_add(state *s, hashname_t alg, file_data_t *f)
 {
-  if (NULL == s || NULL == f)
+  hashtable_entry_t *new, *temp;
+  hashtable_t *t = s->hashes[alg]->known;
+
+  if (NULL == t || NULL == f)
     return status_unknown_error;
-
   
+  uint64_t key = translate(f->hash[alg]);
+  
+  /* RBF - Should we Add check for a valid hash in hashtable_add? */
 
+  if (NULL == t->member[key])
+    {
+      new = (hashtable_entry_t *)malloc(sizeof(hashtable_entry_t));
+      if (NULL == new)
+	return status_out_of_memory;
+
+      new->next = NULL;
+      new->data = f;
+
+      t->member[key] = new;
+      return status_ok;
+    }
+
+  temp = t->member[key];
+
+  /* If this value is already in the table, we don't need to add it again */
+  if (file_data_compare(s,temp->data,f) == status_match)
+    return status_ok;
+
+  while (temp->next != NULL)
+    {
+      temp = temp->next;
+    
+      if (file_data_compare(s,temp->data,f) == status_match)
+	return status_ok;
+    }
+
+  new = (hashtable_entry_t *)malloc(sizeof(hashtable_entry_t));
+  if (NULL == new)
+    return status_out_of_memory;
+  
+  new->next = NULL;
+  new->data = f;
+  
+  temp->next = new;
   return status_ok;
 }
 
 
-status_t hashtable_contains(state *s, file_data_t *f)
+status_t hashtable_contains(state *s, hashtable_t *t, file_data_t *f)
 {
   hashname_t i, first_alg = alg_unknown;
 
-  if (NULL == s || NULL == f)
+  if (NULL == s || NULL == f || NULL == t)
     return status_unknown_error;
   
-  i = 0;
-  while (i < NUM_ALGORITHMS && alg_unknown == first_alg)
-  {
-    if (s->hashes[i]->inuse)
-      first_alg = i;
-    ++i;
-  }
+  
 
-  return status_no_match;
+  return status_match;
 }
